// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render тесты должен нарисовать заглушку, если isRenderingPlaceholder 1`] = `
<div
  className="BackOnSale"
>
  placeholder
</div>
`;

exports[`render тесты должен нарисовать листинг 1`] = `"content"`;

exports[`renderContent должен нарисовать компонент с фильтрами, сортировками, листингом и пагинацией 1`] = `
<React.Fragment>
  <BackOnSaleFilters
    breadcrumbsPublicApi={Object {}}
    className="BackOnSale__filters"
    dispatch={[Function]}
    getBreadcrumbs={[Function]}
    getListing={[Function]}
    handleChangedControl={[Function]}
    handleMMMControlChange={[Function]}
    isLoading={true}
    pagination={
      Object {
        "page": 1,
        "page_size": 10,
        "total_offers_count": 0,
        "total_page_count": 0,
      }
    }
    searchParameters={Object {}}
    searchParametersCounters={
      Object {
        "extended": 0,
        "main": 0,
      }
    }
  />
  <BackOnSaleSorts
    className="BackOnSale__sorts"
    getListing={[Function]}
    handleChangedControl={[Function]}
    searchParameters={Object {}}
  />
  <div
    className="BackOnSale__listing BackOnSale__listing_loading"
  >
    <div
      className="BackOnSale__spinWrapper"
    >
      <Spinner
        className="BackOnSale__spin"
        color="blue"
        size="m"
      />
    </div>
    <BackOnSaleItem
      index={0}
      offer={
        Object {
          "hash": "36c27524",
          "id": "1092904560",
        }
      }
      showPhone={[Function]}
    />
    <BackOnSaleItem
      index={1}
      offer={
        Object {
          "hash": "42c24324",
          "id": "1092904132",
        }
      }
      showPhone={[Function]}
    />
  </div>
  <ListingPagination
    buttonsSize="s"
    className="BackOnSale__pagination"
    current={1}
    disabled={false}
    isFetching={false}
    linkBuilder={[Function]}
    max={0}
    min={1}
    onClick={[Function]}
    onMoreClick={[Function]}
    renderAfterPages={[Function]}
    showMore={true}
    showNextPrev={false}
    showNextTip={true}
    showPrevTip={true}
    size={11}
  />
</React.Fragment>
`;

exports[`renderPlaceholder должен вернуть подпись с картинкой 1`] = `
<React.Fragment>
  <h1
    className="BackOnSale__title"
  >
    Снова в продаже
  </h1>
  <p
    className="BackOnSale__subtitle"
  >
    В данном разделе представлены объявления от частных лиц с Авто.ру, 
    <br />
    которые были опубликованы после того, как вы продали этот автомобиль.
  </p>
  <p
    className="BackOnSale__subtitle"
  >
    Совершая звонки по таким предложениям вы можете повысить объем
    <br />
    выкупленных и принятых в trade-in автомобилей.
  </p>
  <img
    className="BackOnSale__image"
    height="302"
    src={
      Object {
        "default": "picture-of-cat",
      }
    }
    width="383"
  />
  <br />
  <p>
    Для доступа в раздел необходимо регулярно размещать объявления на авто.ру
  </p>
</React.Fragment>
`;

exports[`renderPlaceholder должен вернуть подпись с картинкой и кнопкой 1`] = `
<React.Fragment>
  <h1
    className="BackOnSale__title"
  >
    Снова в продаже
  </h1>
  <p
    className="BackOnSale__subtitle"
  >
    В данном разделе представлены объявления от частных лиц с Авто.ру, 
    <br />
    которые были опубликованы после того, как вы продали этот автомобиль.
  </p>
  <p
    className="BackOnSale__subtitle"
  >
    Совершая звонки по таким предложениям вы можете повысить объем
    <br />
    выкупленных и принятых в trade-in автомобилей.
  </p>
  <img
    className="BackOnSale__image"
    height="302"
    src={
      Object {
        "default": "picture-of-cat",
      }
    }
    width="383"
  />
  <br />
  <Button
    color="blue"
    onClick={[Function]}
    size="l"
    type="button"
    width="default"
  >
    Перейти в раздел
  </Button>
</React.Fragment>
`;
